# CFEAR2D

./: .clang-format  .gitignore  .gitmodules  AngleManifold.hpp  BenchmarkHandler.cpp  BenchmarkHandler.hpp  CMakeLists.txt  CVColor.cpp  CVColor.hpp  CartToLogPolar.cpp  CeresSolverTest.cpp  DisplayRadarImage.cpp  ImageProcessing.cpp  ImageProcessing.hpp  Keyframe.cpp  Keyframe.hpp  Keyframe.tpp  MotionUndistort.cpp  MotionUndistort.hpp  ORSP.hpp  OdometryVisualiser.cpp  OdometryVisualiser.hpp  OptimisationHandler.cpp  OptimisationHandler.hpp  OptimisationHandler.tpp  OrientedSurfacePointsHandler.cpp  OrientedSurfacePointsHandler.hpp  OrientedSurfacePointsHandler.tpp  PointCart2D.cpp  PointCart2D.hpp  PointPolar.cpp  PointPolar.hpp  PointPolar2D.cpp  PointPolar2D.hpp  Pose2D.hpp  PoseGraph.cpp  PoseGraph.hpp  PoseGraphHandler.hpp  PoseTransformHandler.cpp  PoseTransformHandler.hpp  (+22 more)
CFEAR/: FindNeighborInWorld.cpp  KStrong.cpp  MotionCompensation.cpp  Represent.cpp  SaveCartesianImage.cpp
Matlab Code/: Estimate_Continuous.txt  Estimate_Discrete.txt  radar_odometry.csv
archive/: README.md
archive/CFEAR/: Downsample.cpp  Functions.h  Quaternion2EulerAngles.cpp  SE3_SPLINE.h  Test_CFEAR.cpp
archive/Matlab Code/: Traj_Estimate.m
eval/: convertPoses.py
plotter/: parseORSP.py  parsePoses.py  plotORSP.py  plotPoses.py  requirements.txt
scripts/: build.sh  compile.sh  compileandrun.sh  mp4-from-folder.sh  run.sh  startBenchmark.sh
